<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_theme_action_bar" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/mine_space_height"
            android:background="@color/commonPageBgColor" />

        <include layout="@layout/include_horizontal_divider" />

        <FrameLayout
            android:id="@+id/settingShowPersonalInfoFytId"
            style="@style/mineItemLayout">

            <TextView
                style="@style/settingsItemTv"
                android:text="@string/settings_personal_info" />

            <TextView style="@style/mineItemRightArrowTv" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/settingChangePswFytId"
            style="@style/mineItemLayout">

            <TextView
                style="@style/settingsItemTv"
                android:text="@string/settings_change_psw" />

            <TextView style="@style/mineItemRightArrowTv" />

            <include layout="@layout/include_horizontal_divider" />

        </FrameLayout>

        <FrameLayout style="@style/mineItemLayout">

            <TextView
                style="@style/settingsItemTv"
                android:text="@string/settings_feedback" />

            <TextView style="@style/mineItemRightArrowTv" />

            <include layout="@layout/include_horizontal_divider" />

        </FrameLayout>

        <FrameLayout style="@style/mineItemLayout">

            <TextView
                style="@style/settingsItemTv"
                android:text="@string/settings_version_check" />

            <TextView style="@style/mineItemRightArrowTv" />

            <include layout="@layout/include_horizontal_divider" />

        </FrameLayout>

        <FrameLayout style="@style/mineItemLayout">

            <TextView
                style="@style/settingsItemTv"
                android:text="@string/settings_about_us" />

            <TextView style="@style/mineItemRightArrowTv" />

            <include layout="@layout/include_horizontal_divider" />

        </FrameLayout>

        <include layout="@layout/include_horizontal_divider" />

    </LinearLayout>

    <TextView
        android:id="@+id/settingLogoutTvId"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_logout_btn_h"
        android:layout_gravity="bottom"
        android:background="@drawable/theme_color_selector"
        android:gravity="center"
        android:text="@string/settings_logout"
        android:textColor="@android:color/white" />

</FrameLayout>