<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <include layout="@layout/include_theme_action_bar" />

        <EditText
            android:id="@+id/editPileCodeEdtId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/theme_oval_btn_h"
            android:layout_margin="@dimen/common_margin_trbl"
            android:layout_marginTop="@dimen/edit_pile_code_margin"
            android:background="@drawable/edit_pile_code_edt_bg"
            android:hint="@string/edit_pile_code_edt_hint"
            android:padding="@dimen/edit_pile_code_padding"
            android:textColorHint="@color/editPileCodeEdtTextColor"
            android:textSize="@dimen/edit_pile_code_edt_text_size"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/common_margin_trbl"
            android:paddingLeft="@dimen/common_margin_trbl"
            android:layout_marginBottom="@dimen/edit_pile_code_margin">

            <Button
                android:id="@+id/editPileCodeBackBtnId"
                android:layout_width="0dp"
                android:layout_height="@dimen/theme_oval_btn_h"
                android:layout_marginRight="@dimen/common_span"
                android:layout_weight="1"
                android:background="@drawable/white_oval_btn_selector"
                android:text="@string/edit_pile_code_return" />

            <Button
                android:id="@+id/editPileCodeCertainBtnId"
                android:layout_width="0dp"
                android:layout_height="@dimen/theme_oval_btn_h"
                android:layout_marginLeft="@dimen/common_span"
                android:layout_weight="1"
                android:background="@drawable/theme_oval_btn_selector"
                android:text="@string/edit_pile_code_certain"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/grgray" />
    </LinearLayout>

</FrameLayout>